@@ -1,5 +1,13 @@
 2012-11-08  Filip Pizlo  <fpizlo@apple.com>
 
+        ArrayConstructor.h should have correct indentation
+
+        Rubber stamped by Sam Weinig.
+
+        * runtime/ArrayConstructor.h:
+
+2012-11-08  Filip Pizlo  <fpizlo@apple.com>
+
         DFG should know that int == null is always false
         https://bugs.webkit.org/show_bug.cgi?id=101665
 
